# colorim

./: .gitignore  README.md  pyproject.toml  test.py
colorim/: __init__.py  colors.py  convert.py  hex_codes.py  hextorgb.py  rgb.py
