[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colorim"
version = "0.1.1"
description = "A library based off Colorama/Rich with extra features like RGB and hex"
authors = [
    { name = "im-lemon" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["colorim"]